# rust-newsletter-api

./: .dockerignore  .env.example  .env.test.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-01b14ce3c259d3bbabf0d7b11b3b6efb39f2b523f2e6007e71992c692173fdb7.json  query-0d63c31e985e994cadb88649e321e9f0041696414844bdca2e7e80664c4155a1.json  query-115fb2cb032cbf9634893c8d9843476620dc5d6321438c518cbaa6d917718732.json  query-2cd9b97c2306edea25e512fc526af1d509869afbe6038ded8b80220243507a11.json  query-2d0ff1d8ba456484ab321f52200cb98c28eab837a5757ad9fa8aca5dc6c8420b.json  query-33a963b012c0c336149dd1f1cb17cf3783b29c02d8631fe2d129daf900d9acbd.json  query-33b11051e779866db9aeb86d28a59db07a94323ffdc59a5a2c1da694ebe9a65f.json  query-34cc11438c72488576c5c0836acd994e1b219ceeaebe7139028d5b7d44a83ac9.json  query-41794ca127e2a1e8662c5cc84196a943e4a5eef01a7b4442a5da9ef95a6a38c9.json  query-42147e47b1c4daa97d1edeec26de5bcb31108f87388b363497a9cc82ca29bece.json  query-45af3cb7caeb8bc63c7d58eb986c22febe5d3758a965610b61ad9fd53d8045d1.json  query-68c5e5177e4f58d9af29e37fe54456b6e93ec4570732820ae4ed663be09bb061.json  query-6a95d4c66ad4fbda039796bd433df695dadec01d90452b3c85fba50375ed5577.json  query-874e988c402b4b673cf2c4a0d6bb580f09fdb6be66d340a3fcd36b97ff9b8943.json  query-8caf7034322d44e617b64a36af7de540d6b67c1495d301b472c4b4cd1e30bb7c.json  query-982db1ca3f64f67da6f341fe3830b847b3d8b2d6fd17fbe79a4ec0d7375e54e5.json  query-9d3037e3bfef9b0c2b00f3e306fec3babfb52920048f7b32eb30dd1f028aff32.json  query-9f7c8b4298dff38572e647ba6c4600e0baaf55cff04812236be3aa010031d12f.json  query-a037348287cc3f5c45f6ec307bbbaf63d5c25504add2c5ffc12800db914451e3.json  query-a2df3a4999bfc8738680a3ee3ec64f7e6ad8a0ec78974f895d7932c9548180b4.json  query-a8e77aaffa5012019da6ce2f5a68d3861b77735954409ccf6127a37d72c04b20.json  query-abe0ef442e85cdd659c4a4f0b1038039775ed0a55d633c2751780a820bf4916b.json  query-b93289e74d1a1366a4d9bfa5a4c065004d6d9db3a96885306e7fab21e3630c24.json  query-be7254a979ef1dd7f2d070d13d39ae1bdd59f2374eca2cd8691c3a72e6dbfd8c.json  query-c478f38fe02849fa387f5530dc0f895589ce32c620a6b65809e272af0e966042.json  query-c8a67985450da4d128872c48008df60b6e2d9bbea765d2dd559689b231eff971.json  query-d193d6ec6eb816835fb673502b9a718339e5949934d5ab3a2cbdb57ff0477a4b.json  query-e05230e67341b8329a11205a4f566eb10426dad3e9a14a93bd4d760e7ff3dd08.json  query-e0938472c40cb6abda90d93c3aaf68908c0c6970c9d5a4932c3b80dc1d917023.json  query-e910aa4f6c0ba4c5f8a5d5b1f0faa3ae755857ba140ccae372678e0e10add05a.json  query-ea4cc792ba3be7d98188f1d4f261f49660fb1a9bd530a41294335bd730ad4fca.json  query-eda259d1fd50a2f6577b67de8e6a1304226e294eea23d39af232072d18d16131.json  query-f68b35df8144e8dae9e5d73410e0ada61ec3c157727ff2b366986eae806a24ad.json  query-fdf60068a1a761a2ff3d4c8da0f8c6f71be316794edd9b17fceeb54773db22f1.json
configuration/: base.yaml  test.yaml
migrations/: 20210307181858_add_status_to_subscriptions.down.sql  20210307184428_make_status_not_null_in_subscriptions.down.sql  20210822143736_rename_password_column.down.sql  20220313182312_create_idempotency_table.down.sql  20220313184809_relax_null_checks_on_idempotency.down.sql  20251211234229_add_email_and_superuser_to_users_table.down.sql  20251211234229_add_email_and_superuser_to_users_table.up.sql  20251212180339_add_user_id_to_subscriptions.down.sql  20251212180339_add_user_id_to_subscriptions.up.sql  20251212191745_add_user_id_to_newsletter_issues.down.sql  20251212191745_add_user_id_to_newsletter_issues.up.sql  20251214153130_create_user_profiles_table.up.sql  20251222145809_add_cover_image_url_to_newsletter_issues.down.sql  20251222145809_add_cover_image_url_to_newsletter_issues.up.sql
scripts/: dev_loop.sh  pre_commit.sh
src/: configuration.rs  issue_delivery_worker.rs  lib.rs  startup.rs  superuser.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/clients/: cloudinary_client.rs  s3_client.rs
src/domain/: base64_image_url.rs  image_url.rs  mod.rs  new_subscriber.rs
src/models/: mod.rs  newsletter.rs  user.rs  user_profile.rs
(+66 files in other folders)
