[package]
name = "newsletter_api"
version = "0.1.0"
authors = [
  "DiegEnriquezSerrano <diego@diegoenriquezserrano.dev>",
  "LukeMathWalker <rust@lpalmieri.com>",
]
default-run = "newsletter_api"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_api"

[[bin]]
name = "superuser"
path = "src/superuser.rs"

[dependencies]
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
actix-web = "4.12.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
log = "0.4.29"
markdown = "1.0.0"
rand = { version = "0.8.5", features = ["std_rng"] }
regex = "1.11.3"
rpassword = "7.4"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde-aux = "4.7.0"
slug = "0.1.6"
thiserror = "1.0.24"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
unicode-segmentation = "1.12.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = "0.20.0"
voca_rs = "1.15.2"
dotenvy = "0.15.7"

[dependencies.chrono]
default-features = false
features = ["clock", "serde"]
version = "0.4.42"

[dependencies.reqwest]
default-features = false
features = ["cookies", "json", "rustls-tls"]
version = "0.12.25"

[dependencies.sqlx]
default-features = false
features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
]
version = "0.8.6"

[dependencies.tracing-subscriber]
features = ["registry", "env-filter"]
version = "0.3.20"

[dev-dependencies]
claims = "0.8.0"
fake = "2.9"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
wiremock = "0.6.5"
